--- a/front/moduli/programmazione/esempi/esempi_2/esempio_1.html
+++ b/front/moduli/programmazione/esempi/esempi_2/esempio_1.html
@@ -1,1 +1,1 @@
-<iframe src="https://trinket.io/embed/python/45d7f43fe4?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python/45d7f43fe4?runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
