--- a/front/moduli/programmazione/esempi/esempi_2/esempio_2.html
+++ b/front/moduli/programmazione/esempi/esempi_2/esempio_2.html
@@ -1,1 +1,1 @@
-<iframe src="https://trinket.io/embed/python/bc5667126a?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python/bc5667126a?runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
