--- a/front/moduli/programmazione/esempi/esempio_2.html
+++ b/front/moduli/programmazione/esempi/esempio_2.html
@@ -1,1 +1,1 @@
-<iframe src="https://trinket.io/embed/python/dc91646f02?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python/dc91646f02?runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
