--- a/front/moduli/programmazione/esempi/esempio_6.html
+++ b/front/moduli/programmazione/esempi/esempio_6.html
@@ -1,1 +1,1 @@
-<iframe src="https://trinket.io/embed/python/c6785ed23a?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python/c6785ed23a?runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
