--- a/front/moduli/statistica/adv/advtest.html
+++ b/front/moduli/statistica/adv/advtest.html
@@ -11,6 +11,10 @@
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
 		<script src="../../../assets/js/jquery.min.js"></script>
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
+		<script src="../../../assets/js/vue.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+		<script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
+
 		<style>
 			body {
 				background-image: url(../art2.jpg);
@@ -23,7 +27,6 @@
 				font-size: larger;
 			}
 		</style>
-		<script type="text/javascript" src="advtest.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -75,12 +78,43 @@
 				</ul>
 			</div>
 		</nav>
-		<br /><br /><br />
-		<div class="container bg-blur text-monospace">
+
+		<div
+			class="container text-monospace"
+			style="
+				background-color: rgba(255, 255, 255, 0.815);
+				padding-top: 2em;
+				padding-bottom: 2em;
+			"
+		>
+			<br />
+			<br />
+			<br />
 			<div>
-				Dovrai leggere i grafici, riconoscere che tipo di grafici sono rispondere alle
+				Dovrai leggere i grafici, riconoscere che tipo di grafici sono e rispondere alle
 				domande
 			</div>
+			<div>
+				<br />
+
+				<div class="row align-items-center">
+					<div class="col-8">
+						<canvas style="height: 25em; width: 100%;" id="chart"></canvas>
+					</div>
+					<div class="col-4"><div id="app"></div></div>
+				</div>
+				<div style="margin: 2em;">
+					<button
+						value="0"
+						class="btn btn-primary center"
+						style="padding: 1em;"
+						id="prossima"
+					>
+						Seconda Domanda
+					</button>
+				</div>
+			</div>
 		</div>
+		<script src="advtest.js"></script>
 	</body>
 </html>
