--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/statistica/base/base.html">
-						<img src="materie/basestatistica.png" class="w-100" alt="..." />
+						<img src="materie/statistica3.jpg" class="w-100" alt="..." />
 					</a>
 					<div class="carousel-caption text-light bg-text">
 						<h5>Base</h5>
@@ -51,7 +51,7 @@
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/statistica/adv/adv.html">
-						<img src="materie/img3.jpg" class="w-100" alt="..." />
+						<img src="materie/statistica4.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption text-light bg-text">
 							<h5>Grafici</h5>
 							<p>Come leggere, distinguere, interpretare i vari tipi di grafici</p>
