--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/qi/intro/intro2.html">
-						<img src="materie/logica2.png" class="w-100" alt="..." />
+						<img src="materie/logica2.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
 							<h5>intermedio</h5>
 							<p>paragrafo per spiegare o boh non so</p>
@@ -47,7 +47,7 @@
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/qi/intro/intro3.html">
-						<img src="materie/img3.jpg" class="w-100" alt="..." />
+						<img src="materie/logica3.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
 							<h5>avanzato</h5>
 							<p>magna meno e vivi meglio</p>
