--- a/front/moduli/statistica/adv/advtest.html
+++ b/front/moduli/statistica/adv/advtest.html
@@ -98,7 +98,7 @@
 				<br />
 
 				<div class="row align-items-center">
-					<div class="col-8">
+					<div id="lateralgraph" class="col-8">
 						<canvas style="height: 25em; width: 100%;" id="chart"></canvas>
 					</div>
 					<div class="col-4"><div id="app"></div></div>
