--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -127,7 +127,7 @@
 								<th>
 									<button
 										v-on:click="newmedia"
-										onclick=""
+										v-on:keyup.enter="newmedia"
 										class="btn btn-primary"
 									>
 										aggiungi
