--- a/front/moduli/statistica/adv/adv.html
+++ b/front/moduli/statistica/adv/adv.html
@@ -112,7 +112,9 @@
 			</div>
 			<div id="app"></div>
 			<a class="" href="advtest.html"
-				><button style="padding: 1em; margin: auto;">Vai al test</button></a
+				><button class="btn btn-primary" style="padding: 1em; margin: auto;">
+					Vai al test
+				</button></a
 			>
 		</div>
 
