--- a/front/moduli/statistica/adv/adv.html
+++ b/front/moduli/statistica/adv/adv.html
@@ -107,12 +107,12 @@
 			<br /><br /><br />
 			<div class="text-light">
 				In questo capitolo cercheremo di leggere e interpretare diversi grafici, i nomi
-				specifici di questi, come vanno letti e le informazioni che contengono, clicca con
-				il mouse il riquadro che ti interessa
+				specifici di questi, come vanno letti e le informazioni che contengono, muoviti con
+				il mouse sul riquadro che ti interessa
 			</div>
 			<div id="app"></div>
 			<a class="" href="advtest.html"
-				><button class="btn btn-primary" style="padding: 1em; margin: auto;">
+				><button class="btn btn-primary center" style="padding: 1em; margin: auto;">
 					Vai al test
 				</button></a
 			>
