--- a/front/moduli/qi/quiz_qi/quiz_qi.html
+++ b/front/moduli/qi/quiz_qi/quiz_qi.html
@@ -1,344 +1,292 @@
 <!-- @format -->
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>QI QUIZ</title>
-		<link rel="shortcut icon" href="../../../favicon.ico" />
-		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
-		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
-		<script src="../../../assets/js/jquery.min.js"></script>
-		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
-		<style>
-			body {
-				background-image: url("");
-				background-repeat: no-repeat;
-				background-attachment: fixed;
-				background-size: cover;
-			}
-		</style>
 
-		<script type="text/javascript" src="introtest.js"></script>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>QI QUIZ</title>
+	<link rel="shortcut icon" href="../../../favicon.ico" />
+	<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
+	<link rel="stylesheet" href="../../../assets/css/home-made.css" />
+	<script src="../../../assets/js/jquery.min.js"></script>
+	<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
+	<style>
+		body {
+			background-image: url("");
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+	</style>
+</head>
+<script type="text/javascript" src="quiz.js"></script>
 
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+		<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
 			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
 			uso a invece che span per rendere il contenuto interattivo  -->
-			<a class="navbar-brand" href="../../../index.php">Edu@home</a>
-			<!-- ancora come in questo caso -->
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
+		<a class="navbar-brand" href="../../../index.php">Edu@home</a>
+		<!-- ancora come in questo caso -->
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
                 mentre sotto abbiamo una parte collapsable ovvero 
                 che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
-							>LearnMap <span class="sr-only">(current)</span></a
-						>
-					</li>
-				</ul>
-				<ul class="navbar-nav ml-auto dropdown">
-					<a
-						class="nav-link dropdown-toggle"
-						style="margin-right: 8em;"
-						href="#"
-						id="navbarDropdown"
-						role="button"
-						data-toggle="dropdown"
-						aria-haspopup="true"
-						aria-expanded="false"
-					>
-						Profilo
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Impostazioni</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Globa</a>
-					</div>
-				</ul>
-			</div>
-		</nav>
-
-		<br /><br /><br />
-
-		<style>
-			/* scritte */
-			.container {
-				display: block;
-				position: relative;
-				padding-left: 35px;
-				margin-bottom: 12px;
-				cursor: pointer;
-				font-size: 17px;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
-
-			/* nasconde il pulsante */
-			.container input {
-				position: absolute;
-				opacity: 0;
-				cursor: pointer;
-			}
-
-			/* creazione bottone */
-			.checkmark {
-				position: absolute;
-				top: 0;
-				left: 0;
-				height: 25px;
-				width: 25px;
-				background-color: #eee;
-				border-radius: 50%;
-			}
-
-			/* mouse sopra la scritta diventa grigia */
-			.container:hover input ~ .checkmark {
-				background-color: #ccc;
-			}
-
-			/* When the radio button is checked, add a blue background */
-			.container input:checked ~ .checkmark {
-				background-color: #2196f3;
-			}
-
-			/* Create the indicator (the dot/circle - hidden when not checked) */
-			.checkmark:after {
-				content: "";
-				position: absolute;
-				display: none;
-			}
-
-			/* mostra l'indicatore cerchiato */
-			.container input:checked ~ .checkmark:after {
-				display: block;
-			}
-
-			/* stile bottone */
-			.container .checkmark:after {
-				top: 9px;
-				left: 9px;
-				width: 8px;
-				height: 8px;
-				border-radius: 50%;
-				background: white;
-			}
-		</style>
-
-		<br></br>
-		<div id="ilquiz" class="container-lg">
-			<font face="Times New Roman" size="5" >
-			<h4>1.Qual è il numero intruso fra quelli della seguente serie? 
-				9 - 7 - 8 - 6 - 7 - 5 - 6 - 3
-			</h4>
-			<label class="container"
-				>4
-				<input type="radio"  name="radio1" id="d1.1" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>6
-				<input type="radio" name="radio1" id="d1.2" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>3
-				<input type="radio" name="radio1" id="d1.3" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>7
-				<input type="radio" name="radio1" id="d1.4"/>
-				<span class="checkmark"></span>
-			</label>
-
-			<br></br>
-			<h4>2.Quale dei cinque è meno simile agli altri quattro?</h4>
-			<label class="container"
-				>Patata
-				<input type="radio"  name="radio2" id="d2.1"/>
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Mais
-				<input type="radio" name="radio2" id="d2.2" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Mela
-				<input type="radio" name="radio2" id="d2.3" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Carota
-				<input type="radio" name="radio2" id="d2.4" />
-				<span class="checkmark"></span>
-			</label>
-
-			<br></br>
-			<h4>3.Fratello sta a sorella come nipotino sta a:</h4>
-			<label class="container"
-				>Figlia
-				<input type="radio"  name="radio3" id="d3.1" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Madre
-				<input type="radio" name="radio3" id="d3.2" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Zia
-				<input type="radio" name="radio3" id="d3.3" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Nipotina
-				<input type="radio" name="radio3" id="d3.4" />
-				<span class="checkmark"></span>
-			</label>
-			<br></br>
-			<h4>
-				4.Quale delle cinque scelte genera la miglior attinenza? LIVE sta a EVIL come 5232
-				sta a:
-			</h4>
-			<label class="container"
-				>5232
-				<input type="radio"  name="radio4" id="d4.1" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>2325
-				<input type="radio" name="radio4" id="d4.2" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>2532
-				<input type="radio" name="radio4" id="d4.3" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>5223
-				<input type="radio" name="radio4" id="d4.4" />
-				<span class="checkmark"></span>
-			</label>
-			
-			<br></br>
-			<h4>5.Albero sta a terra come camino sta a:</h4>
-			<label class="container"
-				>Fumo
-				<input type="radio"  name="radio5" id="d5.1" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Mattone
-				<input type="radio" name="radio5" id="d5.2" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Cielo
-				<input type="radio" name="radio5" id="d5.3" />
-				<span class="checkmark"></span>
-			</label>
-			<label class="container"
-				>Casa
-				<input type="radio" name="radio5" id="d5.4" />
-				<span class="checkmark"></span> 
-			</label>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a id="home" class="nav-link" href="../../../learnMap/learnMap.php">LearnMap <span
+							class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ml-auto dropdown">
+				<a class="nav-link dropdown-toggle" style="margin-right: 8em;" href="#" id="navbarDropdown"
+					role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Profilo
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="#">Impostazioni</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Globa</a>
+				</div>
+			</ul>
 		</div>
-			
-		<br></br>
-		<div class="container-lg">
-		<a href="#" class="btn-toolset">
-			<strong>Invia risposte</strong>
-			</a>
+	</nav>
 
-		   <style>
-		   .btn-toolset {
-			display: inline-block;
-			text-align: center;
-			white-space: nowrap;
-			color: #FFFFFF;
-			text-decoration: none;
-			line-height: 1.2;
-			font-weight: normal;
-			font-size: 18px;
-			background-color: #007BFF;
-			border-radius: 4px;
-			padding: 5px 14px;
-			border: 1px solid #006FE6;
+	<br /><br /><br />
+
+	<style>
+		/* scritte */
+		.container {
+			display: block;
+			position: relative;
+			padding-left: 35px;
+			margin-bottom: 12px;
 			cursor: pointer;
-		   }
-		   .btn-toolset:hover {
-			background-color: #0063CC;
-			border-color: #0056B3;
-		   }
-		   .btn-toolset > strong {
-			font-size: 20px;
-		   }
-			</style>
-			</div>
-		
-		
-			<script>
-				arrayrisposte1 = [];
-				$(document).ready(function () {
-					$("#next").click(function () {
-						caricaDocumento1(this);
-					});
-				});
-	
-				function afterajax1() {
-					$("checkmark").click(function () {
-						caricaDocumento1(this);
-					});
-				}
-	
-				function caricaDocumento1(e) {
-					if (e.id != "next") {
-						arrayrisposte.push(e.id);
-					}
-					if (e.getAttribute("name") == "radio5") {
-						invia();
-					return;
-					}
-					
-					var httpRequest = new XMLHttpRequest();
-					httpRequest.onreadystatechange = gestisciResponse;
-					httpRequest.open("GET", e.getAttribute("name") + ".html", true);
-					httpRequest.send();
-				}
-				function gestisciResponse(e) {
-					if (e.target.readyState == 4 && e.target.status == 200) {
-						document.getElementById("ilquiz").innerHTML = e.target.responseText;
-					}
-					afterajax1();
-				}
-	
-				function invia() {
-					$.post("quiz.php", { arrayrisposte1 }, function (data, status) {
-						$("#valutazione").text("Hai risposto correttamente a " + data + " su x");
-					});
-				}
-			</script>
+			font-size: 17px;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
 
+		/* nasconde il pulsante */
+		.container input {
+			position: absolute;
+			opacity: 0;
+			cursor: pointer;
+		}
+
+		/* creazione bottone */
+		.checkmark {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 25px;
+			width: 25px;
+			background-color: #eee;
+			border-radius: 50%;
+		}
+
+		/* mouse sopra la scritta diventa grigia */
+		.container:hover input~.checkmark {
+			background-color: #ccc;
+		}
+
+		/* When the radio button is checked, add a blue background */
+		.container input:checked~.checkmark {
+			background-color: #2196f3;
+		}
+
+		/* Create the indicator (the dot/circle - hidden when not checked) */
+		.checkmark:after {
+			content: "";
+			position: absolute;
+			display: none;
+		}
+
+		/* mostra l'indicatore cerchiato */
+		.container input:checked~.checkmark:after {
+			display: block;
+		}
+
+		/* stile bottone */
+		.container .checkmark:after {
+			top: 9px;
+			left: 9px;
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			background: white;
+		}
+	</style>
+	<br></br>
+
+	<div id="ilquiz" class="container-lg">
+		<font face="Times New Roman" size="5">
+
+			<div id="quiz1">
+				<h4>1.Qual è il numero intruso fra quelli della seguente serie?
+					9 - 7 - 8 - 6 - 7 - 5 - 6 - 3
+				</h4>
+				<label class="container" id="1.1">4
+					<input type="radio" name="radio1" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="1.2">6
+					<input type="radio" name="radio1" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="1.3">3
+					<input type="radio" name="radio1" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="1.4">7
+					<input type="radio" name="radio1" />
+					<span class="checkmark"></span>
+				</label>
+			</div>
+
+			<br></br>
+			<div id="quiz2">
+				<h4>2.Quale dei quattro è meno simile agli altri tre?</h4>
+				<label class="container" id="2.1">Patata
+					<input type="radio" name="radio2" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="2.2">Mais
+					<input type="radio" name="radio2" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="2.3">Mela
+					<input type="radio" name="radio2" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="2.4">Carota
+					<input type="radio" name="radio2" />
+					<span class="checkmark"></span>
+				</label>
+			</div>
+
+			<br></br>
+			<div id="quiz3">
+				<h4>3.Fratello sta a sorella come nipotino sta a:</h4>
+				<label class="container" id="3.1">Figlia
+					<input type="radio" name="radio3" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="3.2">Madre
+					<input type="radio" name="radio3" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="3.3">Zia
+					<input type="radio" name="radio3" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="3.4">Nipotina
+					<input type="radio" name="radio3" />
+					<span class="checkmark"></span>
+				</label>
+			</div>
+
+			<br></br>
+			<div id="quiz4">
+				<h4>
+					4.Quale delle cinque scelte genera la miglior attinenza? LIVE sta a EVIL come 5232
+					sta a:
+				</h4>
+				<label class="container" id="4.1">5232
+					<input type="radio" name="radio4" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="4.2">2325
+					<input type="radio" name="radio4" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="4.3">2532
+					<input type="radio" name="radio4" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="4.4">5223
+					<input type="radio" name="radio4" />
+					<span class="checkmark"></span>
+				</label>
+			</div>
+
+			<br></br>
+			<div id="quiz5">
+				<h4>5.Albero sta a terra come camino sta a:</h4>
+				<label class="container" id="5.1">Fumo
+					<input type="radio" name="radio5" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="5.2">Mattone
+					<input type="radio" name="radio5" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="5.3">Cielo
+					<input type="radio" name="radio5" />
+					<span class="checkmark"></span>
+				</label>
+				<label class="container" id="5.4">Casa
+					<input type="radio" name="radio5" />
+					<span class="checkmark"></span>
+				</label>
+			</div>
+
+			<br>
+			<div class="container-lg">
+				<button class="btn btn-primary" type="submit" onclick="invia()">
+					Invia
+				</button>
+			</div>
+			<style>
+				.btn-toolset {
+					display: inline-block;
+					text-align: center;
+					white-space: nowrap;
+					color: #FFFFFF;
+					text-decoration: none;
+					line-height: 1.2;
+					font-weight: normal;
+					font-size: 18px;
+					background-color: #007BFF;
+					border-radius: 4px;
+					padding: 5px 14px;
+					border: 1px solid #006FE6;
+					cursor: pointer;
+				}
+
+				.btn-toolset:hover {
+					background-color: #0063CC;
+					border-color: #0056B3;
+				}
+
+				.btn-toolset>strong {
+					font-size: 20px;
+				}
+			</style>
+
+			<br></br>
+
+
+			<div class="h-100 row">
+				<div id="punteggio" class="col-sm-12 text-center align-center" style="
+						padding: 10px;
+						border-radius: 20px;
+						background: rgba(30, 147, 243, 0.5);
+						transition-duration: 3s;
+					">
+					Premi su invio per conoscere il tuo punteggio
+				</div>
+			</div>
+	</div>
 	</font>
 	<br></br><br></br>
-	</body>
+</body>
+
 </html>
