--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -122,6 +122,7 @@
 										type="number"
 										v-model.number="nuovovalore"
 										class="input-group-text"
+										v-on:keyup.enter="newmedia"
 									/>
 								</th>
 								<th>
