--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -149,10 +149,14 @@
 								</div>
 							</div>
 							<div class="tab-pane fade" id="secondad" role="tabpanel">
-								<div style="padding: 2em;">
-									Come si chiama il libro che racconta il censimento degli ebrei?
-
-									<input type="text" name="libro" id="libro" />
+								<div class="" style="padding: 2em;">
+									<div>
+										Come si chiama il libro che racconta il censimento degli
+										ebrei?
+									</div>
+									<div>
+										<textarea name="libro" id="libro"></textarea>
+									</div>
 								</div>
 							</div>
 							<div class="tab-pane fade" id="terzad" role="tabpanel">
@@ -184,7 +188,7 @@
 										ogni quanti anni viene censita la popolazione italiana?
 									</div>
 									<div>
-										<input type="number" name="anni" id="anni" />
+										<input type="text" name="anni" id="anni" />
 									</div>
 								</div>
 							</div>
