--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -32,16 +32,16 @@
 						<img src="materie/logica1.jpg" class="w-100" alt="..." />
 					</a>
 					<div class="carousel-caption bg-text">
-						<h5>Principiante/tipologia</h5>
-						<p>cosa si può fare nella fase 2?</p>
+						<h5>Introduzione</h5>
+						<p>Un primo sguardo al mondo della logica</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/qi/intro/intro2.html">
 						<img src="materie/logica2.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
-							<h5>intermedio</h5>
-							<p>paragrafo per spiegare o boh non so</p>
+							<h5>Intermedio</h5>
+							<p>Inizia a farsi complicato !</p>
 						</div>
 					</a>
 				</div>
@@ -49,8 +49,8 @@
 					<a href="../moduli/qi/intro/intro3.html">
 						<img src="materie/logica3.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
-							<h5>avanzato</h5>
-							<p>magna meno e vivi meglio</p>
+							<h5>Avanzato</h5>
+							<p>Non ti stressare troppo!!</p>
 						</div>
 					</a>
 				</div>
