--- a/front/learnMap/materie/python.html
+++ b/front/learnMap/materie/python.html
@@ -31,8 +31,8 @@
 					<a href="../moduli/programmazione/parte_1/inizio.html">
 						<img src="materie/python2.jpg" class="w-100" />
 						<div class="carousel-caption bg-text">
-							<h5>First slide label</h5>
-							<a href="http://www.google.it">roba a cazzo che non so</a>
+							<h5>Cosa è python?</h5>
+							<p>Una visione di insieme al mondo della programmazione e di python</p>
 						</div>
 					</a>
 				</div>
@@ -40,8 +40,8 @@
 					<a href="../moduli/programmazione/parte_2/modulo_2.html">
 						<img src="materie/python1.jpg" class="w-100" />
 						<div class="carousel-caption bg-text">
-							<h5>Second slide label</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h5>Iniziamo</h5>
+							<p>Funzioni in python, l'ideale per iniziare</p>
 						</div>
 					</a>
 				</div>
@@ -49,8 +49,11 @@
 					<a href="../moduli/programmazione/basi/introprog.html">
 						<img src="materie/python3.jpg" class="w-100" />
 						<div class="carousel-caption bg-text">
-							<h5>Third slide label</h5>
-							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+							<h5>Ci siamo !</h5>
+							<p>
+								Le cose iniziano a farsi complicate ma non demordere, serve solo un
+								pò di esercizio
+							</p>
 						</div>
 					</a>
 				</div>
