--- a/front/moduli/qi/intro/intro.html
+++ b/front/moduli/qi/intro/intro.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>QI QUIZ</title>
+		<title>LOGICA</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" />
 		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
@@ -18,7 +18,7 @@
 				background-size: cover;
             }
             .bg-blur {
-				background-color: rgba(212, 204, 231, 0.418);
+				background-color: rgba(185, 179, 174, 0.527);
 			}
 		</style>
 		<script type="text/javascript" src="introtest.js"></script>
@@ -73,24 +73,48 @@
 				</ul>
 			</div>
 		</nav>
-        <br /><br /><br /><br /><br /> 
+        <br /><br /><br /><br />
 		
-		<font face="Times New Roman" size="4" >
-        <div class="bg-blur container xl text-monospace"> <br /><br />
-        <p style="text-align: center;"><em><strong>Cos'&egrave; il quoziente intellettivo?</strong></em></p>
-        <p style="text-align: center;">Il&nbsp;<strong>quoziente intellettivo</strong>&nbsp;(o&nbsp;<strong><em>quoziente d&rsquo;intelligenza</em></strong>), spesso indicato con le sigle&nbsp;<strong>QI</strong>&nbsp;o&nbsp;<strong>IQ</strong>&nbsp;(acronimo dei termini inglesi&nbsp;<em>Intelligence Quotient</em>)
-        <br> &egrave; un indicatore che viene sfruttato per definire il livello di intelligenza di un soggetto;</br>
-		<br> Sostanzialmente si tratta di un punteggio che viene ottenuto attraverso dei test d&rsquo;intelligenza.</p> </br>
-		<p style="text-align: center;"><em><strong>Provalo subito!</strong></em></p>
+		
+        <div class="bg-blur container xl text-monospace"> <br />
+		<h2>Pensiero e Ragionamento</h2>
+		
+        <div>Con il Pensiero si intende il processo di rappresentazione mentale di
+			un problema o di una situazione.
+			Pensiero: l’insieme dei processi mentali che rendono disponibili alla
+			mente informazioni prive o meno di un immediato riferimento sensoriale.
+			Una delle funzioni più importanti del pensiero è quella di aiutarci a
+			risolvere i problemi cioè il 
+			<a
+            class="bg-blur more-info"
+            id="numeri"
+            >
+			<strong>PROBLEM SOLVING</strong>
+			
+			<div class="bg-blur" style="display: none;" id="snumeri">
+				<br />
+				<strong>FASI della soluzione di problemi:</strong>
+				Stato iniziale = modo in cui vengono descritte le condizioni di partenza <br>
+				Stato-obiettivo = modo in cui viene illustrato l'obiettivo da raggiungere <br>
+				Operatori = le operazioni per passare da uno stato all'altro <br>
+				Stati intermedi del problema = gli stadi che si ottengono applicando un operatore a <br>
+				uno stato in vista del raggiungimento dell'obiettivo <br>
+				Spazio del problema = modello mentale di questi quattri aspetti del problema &nbsp <br>
+				<br />
+				</div>
+            </a>
+		</div>
+		<br /><br />
+<strong>Provalo subito!</strong></em></p>
         
 		<head>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<title>Untitled Document</title>
 			<style type="text/css">
 			.wrapper {margin:2em; perspective: 100px}
-			.box {width:150px;height:60px;background:rgb(91, 191, 238);margin:0 auto;  border-radius: 26px; transition: 1.1s ease-in-out;}
+			.box {width:140px;height:55px;background:rgb(91, 191, 238);margin:0 auto;  border-radius: 26px; transition: 1.1s ease-in-out;}
 			.box {transform: rotateY(20deg);padding:15px;}
-			.box:hover { transform: scale(1.2); background:rgb(94, 136, 226);}
+			.box:hover { transform: scale(1.2); background:rgb(55, 84, 247);} 
 			</style>
 			
 			
@@ -100,7 +124,7 @@
 			<div class="box">
         	<p style="text-align: center;">&nbsp;
         	<a href="../quiz_qi/quiz_qi.html" class="btn-toolset">
-        	<strong>VAI AL QUIZ</strong></div>
+        	<strong>VAI AL QUIZ</strong></div> 
 			</a>
 			</div>	
 			
@@ -127,8 +151,9 @@
 				</style> </p> <br /><br />
 
 			</head>
-		</font>
-	
+		
+			
 		</div>
+		<script src="intro.js"></script>
 	</body>
 </html>
