--- a/front/moduli/qi/intro/intro2.html
+++ b/front/moduli/qi/intro/intro2.html
@@ -76,7 +76,7 @@
         
         <br><br></br></br>
         <div class="bg-blur container xl text-monospace text-white">
-			<font face="Times New Roman" size="4" >
+			
 			<h2>Cos'è la logica</h2>
             <div>Un gioco di logica è un rompicapo, ovvero un problema o un
             
@@ -103,12 +103,12 @@
     <br/><br/>
 
 				<a href="../quiz_qi/crocetteAjax.html">
-					<button class="btn btn-primary">Risolvi gli enigmi</button>
+					<button class="btn btn-primary">Risolvi le domande</button>
 				</a>
 
-			</font> 
+		
 				<br /><br />
 		</div>        
-    <script src="Untitled-1.js"></script>
+    <script src="intro2.js"></script>
     </body>
 </html>
