--- a/front/moduli/qi/quiz_qi/crocetteAjax.html
+++ b/front/moduli/qi/quiz_qi/crocetteAjax.html
@@ -1,147 +1,129 @@
 <!-- @format -->
-
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>AJAX: esercizio 4</title>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>QI QUIZ</title>
+        <link rel="shortcut icon" href="../../../favicon.ico" />
+        <link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
+        <link rel="stylesheet" href="../../../assets/css/home-made.css" />
+        <script src="../../../assets/js/jquery.min.js"></script>
+        <script src="../../../assets/js/bootstrap.js" lang="--js"></script>
+        <style>
+            body {
+                background-image: url("");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            }
+        </style>
+    </head>
+    <script type="text/javascript" src="quiz.js"></script>
 
-		<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
-		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
-		<script src="../../../jQuery/jquery.min.js"></script>
-		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
-		<script src="../../../assets/js/vue.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
 			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
 			uso a invece che span per rendere il contenuto interattivo  -->
-			<a class="navbar-brand" href="#">Edu@home</a>
-			<!-- ancora come in questo caso -->
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
+            <a class="navbar-brand" href="../../../index.php">Edu@home</a>
+            <!-- ancora come in questo caso -->
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
                 mentre sotto abbiamo una parte collapsable ovvero 
                 che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
-							>Home <span class="sr-only">(current)</span></a
-						>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							role="button"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Settaggi Vari
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a
-							id="abdis"
-							class="nav-link disabled"
-							href="http://www.google.it"
-							tabindex="-1"
-							aria-disabled="true"
-							>Abilitabile traguardo (test)</a
-						>
-					</li>
-				</ul>
-				<!-- //inutile il search per ora  
-				<form class="form-inline my-2 my-lg-0">
-					<input
-						class="form-control mr-sm-2"
-						type="search"
-						placeholder="Matematica"
-						aria-label="Cerca"
-					/>
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-						Cerca
-					</button>
-                </form>
-                -->
-			</div>
-		</nav>
-		
-		<br /><br /><br />
-		<div class="container-md text-monospace">
-			<div id="ajaxSpace">
-				<div>
-					<button class="btn btn-primary" id="next" name="domanda0">Iniziamo</button>
-				</div>
-			</div>
-			<div>
-				<p id="valutazione"></p>
-			</div>
-		</div>
-		<script>
-			arrayrisposte = [];
-			$(document).ready(function () {
-				$("#next").click(function () {
-					caricaDocumento(this);
-				});
-			});
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
+                            >LearnMap <span class="sr-only">(current)</span></a
+                        >
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto dropdown">
+                    <a
+                        class="nav-link dropdown-toggle"
+                        style="margin-right: 8em;"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                    >
+                        Profilo
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Globa</a>
+                    </div>
+                </ul>
+            </div>
+        </nav>
 
-			function afterajax() {
-				$(".qmn_quiz_radio").click(function () {
-					caricaDocumento(this);
-				});
-			}
+        <br /><br /><br />
+        <div class="container-md text-monospace">
+            <div id="ajaxSpace">
+                <div>
+                    <button class="btn btn-primary" id="next" name="domanda0">Iniziamo</button>
+                </div>
+            </div>
+            <div>
+                <p id="valutazione"></p>
+            </div>
+        </div>
+        <script>
+            arrayrisposte = [];
+            $(document).ready(function () {
+                $("#next").click(function () {
+                    caricaDocumento(this);
+                });
+            });
 
-			function caricaDocumento(e) {
-				if (e.id != "next") {
-					arrayrisposte.push(e.id);
-				}
-				if (e.getAttribute("name") == "domanda3") {
-					invia();
-					return;
-				}
-				var httpRequest = new XMLHttpRequest();
-				httpRequest.onreadystatechange = gestisciResponse;
-				httpRequest.open("GET", e.getAttribute("name") + ".html", true);
-				httpRequest.send();
-			}
-			function gestisciResponse(e) {
-				if (e.target.readyState == 4 && e.target.status == 200) {
-					document.getElementById("ajaxSpace").innerHTML = e.target.responseText;
-				}
-				afterajax();
-			}
+            function afterajax() {
+                $(".qmn_quiz_radio").click(function () {
+                    caricaDocumento(this);
+                });
+            }
 
-			function invia() {
-				$.post("crocette.php", { arrayrisposte }, function (data, status) {
-					$("#valutazione").text("Hai risposto correttamente a " + data + " su 3 domande");
-				});
-			}
-		</script>
-	</body>
+            function caricaDocumento(e) {
+                if (e.id != "next") {
+                    arrayrisposte.push(e.id);
+                }
+                if (e.getAttribute("name") == "domanda3") {
+                    invia();
+                    return;
+                }
+                var httpRequest = new XMLHttpRequest();
+                httpRequest.onreadystatechange = gestisciResponse;
+                httpRequest.open("GET", e.getAttribute("name") + ".html", true);
+                httpRequest.send();
+            }
+            function gestisciResponse(e) {
+                if (e.target.readyState == 4 && e.target.status == 200) {
+                    document.getElementById("ajaxSpace").innerHTML = e.target.responseText;
+                }
+                afterajax();
+            }
+
+            function invia() {
+                $.post("crocette.php", { arrayrisposte }, function (data, status) {
+                    $("#valutazione").text(
+                        "Hai risposto correttamente a " + data + " su 3 domande"
+                    );
+                });
+            }
+        </script>
+    </body>
 </html>
