--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<a href="../moduli/qi/intro/intro2.html">
+					<a href="../moduli/qi/quiz_qi/crocetteAjax.html">
 						<img src="materie/logica2.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
 							<h5>Intermedio</h5>
@@ -46,7 +46,7 @@
 					</a>
 				</div>
 				<div class="carousel-item">
-					<a href="../moduli/qi/intro/intro3.html">
+					<a href="../moduli/qi/intro/intro2.html">
 						<img src="materie/logica3.jpg" class="w-100" alt="..." />
 						<div class="carousel-caption bg-text">
 							<h5>Avanzato</h5>
