--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -188,7 +188,7 @@
 										ogni quanti anni viene censita la popolazione italiana?
 									</div>
 									<div>
-										<input type="text" name="anni" id="anni" />
+										<input type="number" name="anni" id="anni" />
 									</div>
 								</div>
 							</div>
