--- a/front/moduli/programmazione/inizio/fondamenti.html
+++ b/front/moduli/programmazione/inizio/fondamenti.html
@@ -14,9 +14,12 @@
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
             
-            body {
-    color: blue;
-    }
+			body {
+				background-image: url(../immagini/progtest.jpg);
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				background-size: cover;
+			}
 
     h1 {
       text-align: center;
@@ -32,7 +35,7 @@
 			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
 			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
 			uso a invece che span per rendere il contenuto interattivo  -->
-			<a class="navbar-brand" href="#">Edu@home</a>
+			<a class="navbar-brand" href="../../../index.php">Edu@home</a>
 			<!-- ancora come in questo caso -->
 			<button
 				class="navbar-toggler"
@@ -51,46 +54,35 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a id="home" class="nav-link" href="../../../learnMap/learnMap.html"
-							>Home <span class="sr-only">(current)</span></a
+						<a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
+							>LearnMap <span class="sr-only">(current)</span></a
 						>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="../IDLE.html">IDLE</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							role="button"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Settaggi Vari
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a
-							id="abdis"
-							class="nav-link disabled"
-							href="http://www.google.it"
-							tabindex="-1"
-							aria-disabled="true"
-							>Abilitabile traguardo (test)</a
-						>
-					</li>
 				</ul>
+				<ul class="navbar-nav ml-auto dropdown">
+					<a
+						class="nav-link dropdown-toggle"
+						style="margin-right: 8em;"
+						href="#"
+						id="navbarDropdown"
+						role="button"
+						data-toggle="dropdown"
+						aria-haspopup="true"
+						aria-expanded="false"
+					>
+						Profilo
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
+					</div>
+				</ul>
+			</div>
+		</nav>
 				<!-- //inutile il search per ora  
 				<form class="form-inline my-2 my-lg-0">
 					<input
@@ -113,9 +105,10 @@
             <div class="container">
                 <h1 >Cos'è la programmazione? </h1>
             </div>
-        <div class="bg-blur container-xl text-monospace text-white">
+        <div class="bg-blur container-xl text-monospace text-dark">
         <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval="false">
-            <div class="carousel-inner" role="listbox">
+			<div class="carousel-inner" style="padding-left: 4em; padding-right: 4em;" role="listbox">
+				
                 <div class="carousel-item active text-center p-4">
                      <p>La programmazione informatica, si basa sulla capacità del computer a svolgere compiti diversi da quelli per cui è stato progettato.
                          Infatti Un computer è una macchina programmabile. Non si limita a eseguire quello che il progettista ha scritto nei circuiti elettrici.
