--- a/front/moduli/programmazione/inizio/fondamenti.html
+++ b/front/moduli/programmazione/inizio/fondamenti.html
@@ -105,9 +105,9 @@
             <div class="container">
                 <h1 >Cos'è la programmazione? </h1>
             </div>
-        <div class="bg-blur container-xl text-monospace text-dark">
-        <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval="false">
-			<div class="carousel-inner" style="padding-left: 4em; padding-right: 4em;" role="listbox">
+        <div class="container-xl text-monospace text-dark">
+        <div id="carouselContent" class="carousel slide" style="background-color: rgba(0,0,0,0.6);" data-ride="carousel" data-interval="false">
+			<div class="carousel-inner" style="padding-left: 4em; padding-right: 4em; " role="listbox">
 				
                 <div class="carousel-item active text-center p-4">
                      <p>La programmazione informatica, si basa sulla capacità del computer a svolgere compiti diversi da quelli per cui è stato progettato.
