--- a/front/moduli/programmazione/parte_2/modulo_2.html
+++ b/front/moduli/programmazione/parte_2/modulo_2.html
@@ -73,7 +73,7 @@
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo/profile.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
