--- a/front/snake/snake.html
+++ b/front/snake/snake.html
@@ -70,7 +70,7 @@ uso a invece che span per rendere il contenuto interattivo  -->
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo/profile.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
