--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -86,16 +86,14 @@
 								data-toggle="list"
 								href="#primad"
 								role="tab"
-								aria-controls="home"
 								>Prima</a
 							>
 							<a
 								class="list-group-item list-group-item-action"
-								id="list-secondad"
+								id="list-secd"
 								data-toggle="list"
-								href="#secondad"
+								href="#secd"
 								role="tab"
-								aria-controls="profile"
 								>Seconda</a
 							>
 							<a
@@ -104,7 +102,6 @@
 								data-toggle="list"
 								href="#terzad"
 								role="tab"
-								aria-controls="messages"
 								>Terza</a
 							>
 							<a
@@ -148,14 +145,14 @@
 									/>babilonesi
 								</div>
 							</div>
-							<div class="tab-pane fade" id="secondad" role="tabpanel">
+							<div class="tab-pane fade" id="secd" role="tabpanel">
 								<div class="" style="padding: 2em;">
 									<div>
 										Come si chiama il libro che racconta il censimento degli
 										ebrei?
 									</div>
 									<div>
-										<textarea name="libro" id="libro"></textarea>
+										<input type="text" name="libro" id="libro" size="30"></input>
 									</div>
 								</div>
 							</div>
